cleaned up documentation generation